[project]
name = "consensus"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
    { name = "tt", email = "ncbateman@gmail.com" },
]
dependencies = [
    "asyncpg~=0.26",
    "fastapi==0.110.1",
    "httpx==0.27.0",
    "loguru==0.6.0",
    "pydantic-settings>=2.5.2",
    "pytz>=2024.2",
    "redis[hiredis]~=5.0.0",
    "typer>=0.12.5",
    "uvicorn==0.30.5",
    "nltk==3.9.1",
    "bittensor==8.3.1",
    "halo==0.0.31",
    "fiber @ git+https://github.com/rayonlabs/fiber.git@optional-packages",
]

[project.scripts]
consensus = "consensus.__main__:main"

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "freezegun>=1.5.1",
    "invoke>=2.2.0",
    "ipython>=8.27.0",
    "pytest-coverage>=0.0",
    "pytest-random-order>=1.1.1",
    "pytest-asyncio==0.21.1",
    "pytest~=8.1.0",
    "ruff>=0.6.8",
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "B008",   # do not perform function calls in argument defaults (pydantic.Field(...))
    "UP032", # forces fstrings
]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "C90", # maccbe
    "I",   # isort
    # "BLE",      # flake8-blind-except  # TODO
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimetz
    "T10",   # flake8-debugger
    # "EM",       # flake8-errmsg  # TODO
    "FA", # flake8-future-annotations
    # "PIE",      # flake8-pie  # TODO
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "RET",
    # "PL",       # pylint  # TODO
    "PERF", # perflint
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ["consensus"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/consensus"]

[tool.ruff.lint.mccabe]
max-complexity = 11  # TODO: get this down to 8

[tool.typos.default]
extend-ignore-identifiers-re = [
    # ignore a single line by putting this on the end.
    "(?Rm)^.*(#|//)\\s*spellcheck:ignore$",

    # ignore a block by surrounding it with spellcheck:on and spellcheck:off
    "(?s)(#|//)\\s*spellcheck:off.*?\\n\\s*(#|//)\\s*spellcheck:on",

    # ss58 hotkeys
    "[a-zA-Z0-9]{48}",

    # fingerprints
    "[a-zA-Z0-9]{16}",
]

[tool.pytest.ini_options]
addopts      = "--random-order --cov=consensus --cov-report=term-missing --cov-report=xml"
asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope = "session"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
